<resources>
    <string name="app_name">Vistacan</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="dashboard">Dashboard</string>
    <string name="patients">Patients</string>
    <string name="encounters">Encounters</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="fee_codes">Fee Codes *</string>
    <string name="type_changes_cad">Change (CAD - $)</string>
    <string name="type_unit">Units</string>
    <string name="type_icd_code_description">Type ICD Code / Description</string>
    <string name="skip">Skip</string>
    <string name="title_onboarding_1">New Appointments List</string>
    <string name="description_onboarding_1">Booked Appointment List Showing with Patient Information</string>

    <string name="title_onboarding_2">Create New Appointments</string>
    <string name="description_onboarding_2">User can create the appointments with simpleway </string>
    <string name="about_title_first">Vistacan Application is a minimized version of Vistacan EMR</string>
    <string name="about_title_second">It will doctor/provider to create encounter , voice dictation , diagnosis code and fee code entry of patient visit .</string>
    <string name="title_onboarding_3">Data Sync with web application</string>
    <string name="description_onboarding_3"></string>
    <string name="Welcome">Get Started</string>
    <string name="internet_connection">No Internet Connection</string>
    <string name="timed_out">Connection Timed Out</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="invalid_login">Invalid Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newpatients">New Patient</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="welcome_text">Hello,Welcome back to your account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="mobilenum">Mobile Number</string>
    <string name="logout_content">" Are you sure you want to log out? "</string>
    <string name="cancel">Cancel</string>
    \
    <string-array name="spinner_items">
        <item>Clinics</item>
        <item>seemymd.ca</item>
        <item>vemr.ca</item>
        <item>bookmymd.ca</item>
        <!-- Add more items as needed -->
    </string-array>
    <string name="phonenum">Mobile</string>
    <string name="resent_otp">Resent OTP</string>
    <string name="verify">Verify</string>
    <string name="samplenum">+6589632369</string>
    <string name="editicon">edit</string>
    <string name="verficationcode">Verfication Code</string>
    <string name="otpsmptext">We have sent the code verification to Your Mobile Number</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create a Password</string>
    <string name="update_app">Update app</string>
    <string name="Please_update_latest_version">Please update your app to the latest version</string>
    <string name="new_version_available">New version available</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="dob">DOB</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="patientsearch_hint">search patient name</string>
    <string name="phn">PHN</string>
    <string name="gender">Gender</string>
    <string name="phn_row">PHN       :</string>
    <string name="gender_row">Gender  :</string>
    <string name="phone_row">Phone    :</string>
    <string name="email_row">Email      :</string>
    <string name="name_row">Name     :</string>
    <string name="no_data_available">No Data Available</string>

    <string name="name">Name</string>
    <string name="action">Action</string>
    <string name="newencounter">New Encounter</string>
    <string name="diagnosis_codes">Diagnosis Codes</string>
    <string name="patientname">Patient name</string>
    <string name="dateandservice">Date &amp; Facility</string>
    <string name="dateofservice">Date of Service</string>
    <string name="time">Time</string>
    <string name="visitcategory">Visit Category</string>
    <string name="facility">Facility</string>
    <string name="billfacility">Bill Facility</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="patient_picture">Patient Picture</string>
    <string name="uploadimage">Upload Image</string>
    <string name="medicalimage">Medical Image</string>
    <string name="patientlist">Patient List</string>
    <string name="about">About</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="currentpassword">Current Password</string>
    <string name="servicefacility">Service Facility</string>
    <string name="msppractioner">MSP Practioner Number</string>
    <string name="msp_payee">MSP Payee Number</string>
    <string name="datacenter_num">Data Center Number</string>
    <string name="collegelicense_num">College License Number</string>


</resources>