<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/dashboard"
                android:icon="@drawable/ic_baseline_space_dashboard_"
                android:title="@string/dashboard"
                android:checked="true"
                android:checkable="true"/>
            <item
                android:id="@+id/patient"
                android:icon="@drawable/ic_baseline_patient"
                android:title="@string/patients"
                android:checkable="true"/>
            <item
                android:id="@+id/encounters"
                android:icon="@drawable/ic_baseline_encounters"
                android:title="@string/encounters"
                android:checkable="true"/>
            <item
                android:id="@+id/reports"
                android:icon="@drawable/ic_baseline_reports"
                android:title="@string/reports"
                android:checkable="true"/>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_baseline_settings"
                android:title="@string/settings"
                android:checkable="true"/>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_logout"
                android:title="@string/logout"
                android:checkable="true"/>
        </menu>
