<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.health.vistacan.setting.viewmodel.SettingViewModel" />


    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/search_bg"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:paddingStart="15dp"
        android:inputType="text"
        android:textSize="16sp"
        android:gravity="center_vertical"/>
    <TextView
        android:id="@+id/nameerror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text=""
        android:textColor="@color/md_red_700"
        android:textSize="14sp" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_bg"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:paddingStart="15dp"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/emailerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_bg"
            android:hint="@string/phone"
            android:imeOptions="actionNext"
            android:paddingStart="15dp"
            android:inputType="phone"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/phoneerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/servicefacility"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:imeOptions="actionNext"
            android:background="@drawable/search_bg"
            android:hint="@string/servicefacility"
            android:paddingStart="15dp"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/serviceerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/msp_practioner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:imeOptions="actionNext"
            android:background="@drawable/search_bg"
            android:hint="@string/msppractioner"
            android:paddingStart="15dp"
            android:inputType="number"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/msp_practionererror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/msp_payee"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:imeOptions="actionNext"
            android:background="@drawable/search_bg"
            android:hint="@string/msp_payee"
            android:paddingStart="15dp"
            android:inputType="number"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/msp_payeererror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/datacenter_num"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:background="@drawable/search_bg"
            android:hint="@string/datacenter_num"
            android:paddingStart="15dp"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/datacentererror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/collegelicense_num"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="number"
            android:background="@drawable/search_bg"
            android:hint="@string/collegelicense_num"
            android:paddingStart="15dp"
            android:textSize="16sp"
            android:imeOptions="actionDone"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/collegelicense_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:backgroundTint="@color/md_deep_purple_500"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:elevation="10dp"
            android:shadowColor="@color/light_grey"
            app:cornerRadius="20dp"
            />
    </LinearLayout>
    </ScrollView>
</layout>