<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.health.vistacan.encounter.viewmodel.EncounterViewModel" />


    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:lineSpacingMultiplier="1.19"
            android:text="@string/dateandservice"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/dateofservicetxt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_bg"
            android:gravity="center_vertical"
            android:hint="@string/dateofservice"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/light_grey"/>
        <TextView
            android:id="@+id/dateserviceerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:lineSpacingMultiplier="1.19"
            android:text="@string/time"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_bg"
            android:gravity="center_vertical"
            android:hint="@string/time"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:textColorHint="@color/light_grey"/>
        <TextView
            android:id="@+id/timeerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:lineSpacingMultiplier="1.19"
            android:text="@string/visitcategory"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="20sp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_bg"
            android:gravity="center">

            <Spinner
                android:id="@+id/visitspinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:spinnerMode="dropdown" />
        </FrameLayout>
        <TextView
            android:id="@+id/visitspinnererror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:lineSpacingMultiplier="1.19"
            android:text="@string/facility"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="20sp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_bg"
            android:gravity="center">

            <Spinner
                android:id="@+id/facilityspinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:spinnerMode="dropdown" />
        </FrameLayout>
        <TextView
            android:id="@+id/facilityspinnerrerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:lineSpacingMultiplier="1.19"
            android:text="@string/billfacility"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="20sp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_bg"
            android:gravity="center">

            <Spinner
                android:id="@+id/billfacilityspinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:spinnerMode="dropdown" />
        </FrameLayout>
        <TextView
            android:id="@+id/billfacilityspinnerrerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:lineSpacingMultiplier="1.19"
            android:text="@string/sensitivity"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="20sp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/search_bg"
            android:gravity="center">

            <Spinner
                android:id="@+id/sensitivityspinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:spinnerMode="dropdown" />
        </FrameLayout>
        <TextView
            android:id="@+id/sensitivityspinnererror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text=""
            android:textColor="@color/md_red_700"
            android:textSize="14sp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next" />
    </LinearLayout>
</ScrollView>
</layout>