<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.health.vistacan.password.viewmodel.PasswordViewModel" />

    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".password.view.PasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical"
        android:padding="5dp">
        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:src="@drawable/backarrow"
            app:tint="@color/md_deep_purple_700" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/create_password"
            android:textColor="@color/purple_700"
            android:textSize="20dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />


    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_tx"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/search_bg"
        android:hint="@string/new_password"
        android:textColorHint="@color/light_grey"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:background="#00000000"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/password_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text=""
        android:textColor="@color/md_red_700"
        android:textSize="14dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpassword_tx"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/search_bg"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/light_grey"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmpassword_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:background="#00000000"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/conpassword_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text=""
        android:textColor="@color/md_red_700"
        android:textSize="14dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="18dp"
        app:cornerRadius="20dp" />

</LinearLayout>
</layout>